# conway

./: .gitignore  Cargo.toml  README.md  conway.py  requirements.txt
src/: debug.wgs1  main.rs  main_bak.rs  shader.wgs1  tuning.rs
